@@ -62,13 +62,15 @@ else
 # Common file/socket descriptor support
 
 CSRCS += fs_close.c fs_closedir.c fs_dup.c fs_dup2.c fs_fcntl.c
-CSRCS += fs_filedup.c fs_filedup2.c fs_ioctl.c fs_lseek.c fs_open.c
-CSRCS += fs_opendir.c fs_poll.c fs_read.c fs_readdir.c fs_rewinddir.c
-CSRCS += fs_rmdir.c fs_seekdir.c fs_stat.c fs_statfs.c fs_select.c
-CSRCS += fs_write.c
+CSRCS += fs_filedup.c fs_filedup2.c fs_ioctl.c fs_lseek.c fs_mkdir.c
+CSRCS += fs_open.c fs_opendir.c fs_poll.c fs_read.c fs_readdir.c
+CSRCS += fs_rewinddir.c fs_rmdir.c fs_seekdir.c fs_stat.c fs_statfs.c
+CSRCS += fs_select.c fs_write.c
+
 CSRCS += fs_files.c fs_foreachinode.c fs_inode.c fs_inodeaddref.c
 CSRCS += fs_inodefind.c fs_inoderelease.c fs_inoderemove.c
 CSRCS += fs_inodereserve.c
+
 CSRCS += fs_registerdriver.c fs_unregisterdriver.c
 CSRCS += fs_registerblockdriver.c fs_unregisterblockdriver.c
 CSRCS += fs_findblockdriver.c fs_openblockdriver.c fs_closeblockdriver.c
@@ -102,7 +104,7 @@ endif
 
 ifneq ($(CONFIG_DISABLE_MOUNTPOINT),y)
 
-CSRCS += fs_fsync.c fs_mkdir.c fs_mount.c fs_rename.c fs_umount.c
+CSRCS += fs_fsync.c fs_mount.c fs_rename.c fs_umount.c
 CSRCS += fs_unlink.c
 CSRCS += fs_foreachmountpoint.c
 
